--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "goat-from-streamers",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "axios": "^1.7.2"
-  },
-  "license": "MIT",
+    "axios": "^1.7.2",
+    "express": "^4.19.2"
+  }
 }
